--- a/src/components/Events/index.css
+++ b/src/components/Events/index.css
@@ -3,6 +3,8 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  height: auto;
+  min-height: 100vh;
 }
 .eventsCardsContainer {
   display: flex;
@@ -24,4 +26,10 @@
   width: 90%;
   list-style: none;
   flex-direction: row;
+}
+.registrationStatusContainer {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
